--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -11,4 +11,4 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag reviewdog-eslint:$(date +%s)
+      run: docker build . --file Dockerfile --tag tsuyoshicho-textlint:$(date +%s)
