--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -6,12 +6,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
+        with:
+          submodules: true
       - name: textlint-github-pr-check
         uses: tsuyoshicho/action-textlint@v1
         with:
           github_token: ${{ secrets.github_token }}
+          reporter: github-pr-check
+          textlint_flags: "doc/*"
       - name: textlint-github-pr-review
         uses: tsuyoshicho/action-textlint@v1
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
+          textlint_flags: "doc/*"
