--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -10,5 +10,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+      submodules: true
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag tsuyoshicho-textlint:$(date +%s)
