test action need latest master

--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -9,13 +9,13 @@ jobs:
         with:
           submodules: true
       - name: textlint-github-pr-check
-        uses: tsuyoshicho/action-textlint@v1
+        uses: tsuyoshicho/action-textlint@master
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-check
           textlint_flags: "doc/*"
       - name: textlint-github-pr-review
-        uses: tsuyoshicho/action-textlint@v1
+        uses: tsuyoshicho/action-textlint@master
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
