work with new reporter

--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -13,10 +13,16 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-check
-          textlint_flags: "doc/*"
+          textlint_flags: "doc/**"
+      - name: textlint-github-check
+        uses: tsuyoshicho/action-textlint@master
+        with:
+          github_token: ${{ secrets.github_token }}
+          reporter: github-check
+          textlint_flags: "doc/**"
       - name: textlint-github-pr-review
         uses: tsuyoshicho/action-textlint@master
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
-          textlint_flags: "doc/*"
+          textlint_flags: "doc/**"
