--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: 'Run textlint with reviewdog'
-description: 'Run textlint with reviewdog on pull requests to improve document writing experience.'
+description: '🐶Run textlint with reviewdog on pull requests to improve document writing experience.'
 author: 'Tsuyoshi CHO <Tsuyoshi.CHO+develop@Gmail.com>'
 inputs:
   github_token:
@@ -8,15 +8,18 @@ inputs:
   level:
     description: 'Report level for reviewdog [info,warning,error]'
     default: 'error'
+    required: false
   reporter:
     description: |
-      Reporter of reviewdog command [github-pr-check,github-pr-review].
+      Reporter of reviewdog command [github-pr-check,github-check,github-pr-review].
       Default is github-pr-check.
       github-pr-review can use Markdown and add a link to rule page in reviewdog reports.
     default: 'github-pr-check'
+    required: false
   textlint_flags:
     description: "flags and args of textlint command. Default: '.'"
     default: '.'
+    required: false
 runs:
   using: 'docker'
   image: 'Dockerfile'
