--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "url": "https://github.com/tsuyoshicho/action-textlint/issues"
   },
   "homepage": "https://github.com/tsuyoshicho/action-textlint#readme",
-  "devDependencies": {
+  "devDependencies": {},
+  "dependencies": {
     "textlint": "11.6.3",
     "textlint-rule-preset-ja-technical-writing": "3.1.3",
     "textlint-rule-prh": "5.3.0",
