--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,23 +10,29 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          submodules: true
 
       # Bump version on merging Pull Requests with specific labels.
       # (bump:major,bump:minor,bump:patch)
-      - id: bumpr
+      - name: Bump version
+        id: bumpr
         if: "!startsWith(github.ref, 'refs/tags/')"
         uses: haya14busa/action-bumpr@v1
 
       # Update corresponding major and minor tag.
       # e.g. Update v1 and v1.2 when releasing v1.2.3
-      - uses: haya14busa/action-update-semver@v1
+      - name: Update semver
+        uses: haya14busa/action-update-semver@v1
         if: "!steps.bumpr.outputs.skip"
         with:
           tag: ${{ steps.bumpr.outputs.next_version }}
 
       # Get tag name.
-      - id: tag
+      - name: Tag check
+        id: tag
         uses: haya14busa/action-cond@v1
         with:
           cond: "${{ startsWith(github.ref, 'refs/tags/') }}"
@@ -34,7 +40,8 @@ jobs:
           if_false: ${{ steps.bumpr.outputs.next_version }}
 
       # Create release.
-      - uses: actions/create-release@v1
+      - name: Create release
+        uses: actions/create-release@v1
         if: "steps.tag.outputs.value != ''"
         env:
           # This token is provided by Actions, you do not need to create your own token
