--- a/.github/workflows/update_semver.yml
+++ b/.github/workflows/update_semver.yml
@@ -9,5 +9,9 @@ jobs:
   update-semver:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: haya14busa/action-update-semver@v1
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          submodules: true
+      - name: Update semver
+        uses: haya14busa/action-update-semver@v1
