--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -9,6 +9,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: true
+      - name: Setup node/npm
+        uses: actions/setup-node@v2
+        with:
+          node-version: '15' # node v15 with npm v7
       - name: textlint-github-pr-check
         uses: tsuyoshicho/action-textlint@master
         with:
