--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -10,9 +10,9 @@ jobs:
         with:
           submodules: true
       - name: Setup node/npm
-        uses: actions/setup-node@v2-beta
+        uses: actions/setup-node@v2-beta # @v2 is not available yet
         with:
-          node-version: '15' # node v15 with npm v7
+          node-version: '14' # '15' is not available yet
       - name: textlint-github-pr-check
         uses: tsuyoshicho/action-textlint@master
         with:
