--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -14,19 +14,19 @@ jobs:
         with:
           node-version: '15'
       - name: textlint-github-pr-check
-        uses: tsuyoshicho/action-textlint@master
+        uses: tsuyoshicho/action-textlint@trial1
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-check
           textlint_flags: "doc/**"
       - name: textlint-github-check
-        uses: tsuyoshicho/action-textlint@master
+        uses: tsuyoshicho/action-textlint@trial1
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-check
           textlint_flags: "doc/**"
       - name: textlint-github-pr-review
-        uses: tsuyoshicho/action-textlint@master
+        uses: tsuyoshicho/action-textlint@trial1
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
