--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,31 +1,51 @@
-name: reviewdog
-on: [pull_request]
+name: Test
+on:
+  push:
+    branches:
+      - master
+  pull_request:
 jobs:
-  textlint:
-    name: runner / textlint
+  test-check:
+    name: runner / textlint (github-check)
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
           submodules: true
-      - name: Setup node/npm
-        uses: actions/setup-node@v1
-        with:
-          node-version: '15'
-      - name: textlint-github-pr-check
-        uses: ./
-        with:
-          github_token: ${{ secrets.github_token }}
-          reporter: github-pr-check
-          textlint_flags: "doc/**"
       - name: textlint-github-check
         uses: ./
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-check
           textlint_flags: "doc/**"
-      - name: textlint-github-pr-review
+
+  test-pr-check:
+    if: github.event_name == 'pull_request'
+    name: runner / textlint (github-pr-check)
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          submodules: true
+      - name: textlint-github-check
+        uses: ./
+        with:
+          github_token: ${{ secrets.github_token }}
+          reporter: github-pr-check
+          textlint_flags: "doc/**"
+
+  test-pr-review:
+    if: github.event_name == 'pull_request'
+    name: runner / textlint (github-pr-review)
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          submodules: true
+      - name: redpen-github-pr-review
         uses: ./
         with:
           github_token: ${{ secrets.github_token }}
