--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
           reporter: github-check
           textlint_flags: "doc/**"
 
-  test-pr-check:
+  test-pr-check-npm:
     if: github.event_name == 'pull_request'
     name: runner / textlint (github-pr-check)
     runs-on: ubuntu-latest
@@ -32,10 +32,61 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: true
+      - name: Setup node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 20
       - name: textlint-github-check
         uses: ./
         with:
           github_token: ${{ secrets.github_token }}
+          reporter: github-pr-check
+          package_manager: npm
+          textlint_flags: "doc/**"
+
+  test-pr-check-yarn:
+    if: github.event_name == 'pull_request'
+    name: runner / textlint (github-pr-check)
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          submodules: true
+      - name: Setup node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 20
+      - name: textlint-github-check
+        uses: ./
+        with:
+          github_token: ${{ secrets.github_token }}
+          package_manager: yarn
+          reporter: github-pr-check
+          textlint_flags: "doc/**"
+
+  test-pr-check-pnpm:
+    if: github.event_name == 'pull_request'
+    name: runner / textlint (github-pr-check)
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          submodules: true
+      - name: Setup node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 20
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: latest
+      - name: textlint-github-check
+        uses: ./
+        with:
+          github_token: ${{ secrets.github_token }}
+          package_manager: pnpm
           reporter: github-pr-check
           textlint_flags: "doc/**"
 
