test: Add bun test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -90,6 +90,31 @@ jobs:
           reporter: github-pr-check
           textlint_flags: "doc/**"
 
+  test-pr-check-bun:
+    if: github.event_name == 'pull_request'
+    name: runner / textlint (github-pr-check)
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          submodules: true
+      - name: Setup node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 20
+      - name: Setup bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
+      - name: textlint-github-check
+        uses: ./
+        with:
+          github_token: ${{ secrets.github_token }}
+          package_manager: pnpm
+          reporter: github-pr-check
+          textlint_flags: "doc/**"
+
   test-pr-review:
     if: github.event_name == 'pull_request'
     name: runner / textlint (github-pr-review)
