fixup! test: Add bun test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -111,7 +111,7 @@ jobs:
         uses: ./
         with:
           github_token: ${{ secrets.github_token }}
-          package_manager: pnpm
+          package_manager: bun
           reporter: github-pr-check
           textlint_flags: "doc/**"
 
