--- a/action.yml
+++ b/action.yml
@@ -36,7 +36,7 @@ inputs:
     description: 'Tool name to use for reviewdog reporter'
     default: 'textlint'
   package_manager:
-    description: 'Package manager used in the repository'
+    description: 'Package manager used in the repository [npm,yarn,pnpm,bun]'
     default: 'npm'
 runs:
   using: 'composite'
