--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -12,8 +12,8 @@ jobs:
     name: runner / shellcheck
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-      - uses: haya14busa/action-cond@94f77f7a80cd666cb3155084e428254fea4281fd # v1
+      - uses: actions/checkout@v4.2.2
+      - uses: haya14busa/action-cond@v1.2.1
         id: reporter
         with:
           cond: ${{ github.event_name == 'pull_request' }}
@@ -29,14 +29,14 @@ jobs:
   #   name: runner / hadolint
   #   runs-on: ubuntu-latest
   #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: haya14busa/action-cond@v1
+  #     - uses: actions/checkout@v4.2.2
+  #     - uses: haya14busa/action-cond@v1.2.1
   #       id: reporter
   #       with:
   #         cond: ${{ github.event_name == 'pull_request' }}
   #         if_true: "github-pr-review"
   #         if_false: "github-check"
-  #     - uses: reviewdog/action-hadolint@v1
+  #     - uses: reviewdog/action-hadolint@v1.50.2
   #       with:
   #         github_token: ${{ secrets.github_token }}
   #         reporter: ${{ steps.reporter.outputs.value }}
@@ -46,8 +46,8 @@ jobs:
     name: runner / misspell
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-      - uses: reviewdog/action-misspell@18ffb61effb93b47e332f185216be7e49592e7e1 # v1
+      - uses: actions/checkout@v4.2.2
+      - uses: reviewdog/action-misspell@v1.26.3
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-check
@@ -58,8 +58,8 @@ jobs:
     name: runner / alex
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-      - uses: reviewdog/action-alex@986cf7dd82e702f82b4173deaa793a849f5b719d # v1
+      - uses: actions/checkout@v4.2.2
+      - uses: reviewdog/action-alex@v1.15.4
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-check
